Add search button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <div class="modal">
 
       <div class="modal-content">
+        <div class="buttons">    
+        <input type="text" id="search-box" class="search-box" name="search">
+          <div id="search-button" class="search-button">Search</div>
+          <div id="random-button" class="random-button">Random</div>
+        </div>
 
         <h1 id="recipe-name" class="recipe-name"></h1>
 
